# stitcher16

./: CMakeLists.txt  README.md
src/: detailed.cpp  main.cpp  pathware.h  simple.cpp  tiff.cpp
